added move cursor

--- a/index2.html
+++ b/index2.html
@@ -11,13 +11,13 @@
 <body>
   <div class="header">
       <div class="container small">
-          <a href="/index.html"><</a>
+          <a href="./index.html"><</a>
         </div>
       <div class="container">
           <h1>Sexy Typography</h1>
       </div>
       <div class="container small">
-        <a href="/index3.html">></a>
+        <a href="./index3.html">></a>
       </div>
       
   </div>
