--- a/index5.html
+++ b/index5.html
@@ -11,13 +11,13 @@
 <body>
   <div class="header">
       <div class="container small">
-          <a href="/index4.html"><</a>
+          <a href="./index4.html"><</a>
         </div>
       <div class="container">
           <h1> Useful Broken Images</h1>
       </div>
       <div class="container small">
-        <a href="/index6.html">></a>
+        <a href="./index6.html">></a>
       </div>
       
   </div>
