--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <div class="header">
       <div class="container small">
-          <a href="/index21.html"><</a>
+          <a href="#"><</a>
         </div>
       <div class="container">
           <h1>Fancy Buttons</h1>
       </div>
       <div class="container small">
-        <a href="/index2.html">></a>
+        <a href="./index2.html">></a>
       </div>
       
   </div>
