--- a/index3.html
+++ b/index3.html
@@ -11,13 +11,13 @@
 <body>
   <div class="header">
       <div class="container small">
-          <a href="/index2.html"><</a>
+          <a href="./index2.html"><</a>
         </div>
       <div class="container">
           <h1>Clipping Images</h1>
       </div>
       <div class="container small">
-        <a href="/index4.html">></a>
+        <a href="./index4.html">></a>
       </div>
       
   </div>
