--- a/index4.html
+++ b/index4.html
@@ -11,13 +11,13 @@
 <body>
   <div class="header">
       <div class="container small">
-          <a href="/index3.html"><</a>
+          <a href="./index3.html"><</a>
         </div>
       <div class="container">
           <h1>Registration Form</h1>
       </div>
       <div class="container small">
-        <a href="/index5.html">></a>
+        <a href="./index5.html">></a>
       </div>
       
   </div>
